style.css
body {
  font-family: "Manrope", sans-serif;
}

.header {
  display: flex;
  justify-content: space-between;
  margin-right: 50px;
  margin-left: 25px;
}

.headerBtns {
  display: flex;
  margin-top: 10px;
  gap: 10px;
}

#darkModeBtn,
#lightModeBtn {
  height: fit-content;
  border-radius: 10px;
  background-color: #cbd2d0;
  border: none;
}

.light-mode {
  background-color: white;
  color: black;
}

.card:hover {
  box-shadow: 0px 0px 10px 2px rgb(0 0 0 / 0.2);
}

.dark-mode {
  background-color: #202124;
  color: #c0c8d0;
}

#inputBar {
  display: flex;
  margin-left: 25px;
}

#searchBar,
#searchBtn {
  font-size: 20px;
}

button {
  cursor: pointer;
}

#searchBtn {
  background-color: #cbd2d0;
  border: none;
}

#container {
  display: flex;
  flex-wrap: wrap;
  padding-top: 30px;
  margin: 10px;
  gap: 17px;
}

.card {
  flex: 1 0 200px;
  border: solid black 2px;
  border-radius: 10px;
  text-align: center;
  padding: 5px;
  cursor: pointer;
}

#cardTitle {
  font-size: 20px;
}

#cardFlagImg {
  width: 100%;
}

#topBtn {
  display: none;
  position: fixed;
  bottom: 20px;
  right: 30px;
  z-index: 99;
  border: none;
  outline: none;
  background-color: #cbd2d0;
  cursor: pointer;
  padding: 15px;
  border-radius: 10px;
  font-size: 18px;
}

#countryName {
  text-align: center;
}

#cardInfo {
  display: none;
  width: 30%;
  margin: auto;
  top: 15%;
  left: 35%;
  border: solid black 3px;
  border-radius: 10px;
  position: fixed;
  z-index: 99;
  background-color: white;
}

#cardInfoTitle {
  margin-top: 10px;
  font-size: 25px;
  margin-left: 15px;
}

#displayFlag {
  max-width: 94%;
  border-radius: 20px;
  padding-top: 5px;
  padding-left: 12px;
}

#displayTextContainer {
  margin-top: -20px;
  display: flex;
  justify-content: space-around;
}

.close {
  cursor: pointer;
  position: absolute;
  top: 60%;
  right: 4%;
  transform: translate(0%, -50%);
  font-size: 20px;
}

